Update mdoclet to 2.0.0 which is JDK 11 compatible